// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product GuardianWeeklyDomestic correctly 1`] = `
<div>
  <span
    class="css-1p5gon9"
  >
    <div>
      <p
        class="css-1378exm"
      >
        Your first issue of Guardian Weekly will be published on 01-01-25
      </p>
      <p>
        Please allow one to seven days after the publication date for your copy to be delivered to your door, depending on postal services.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product GuardianWeeklyRestOfWorld correctly 1`] = `
<div>
  <span
    class="css-1p5gon9"
  >
    <div>
      <p
        class="css-1378exm"
      >
        Your first issue of Guardian Weekly will be published on 01-01-25
      </p>
      <p>
        Please allow one to seven days after the publication date for your copy to be delivered to your door, depending on postal services.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product HomeDelivery correctly 1`] = `
<div>
  <span
    class="css-1p5gon9"
  >
    <div>
      <p
        class="css-1378exm"
      >
        You will receive your newspaper from 01-01-25
      </p>
      <p>
        Visit your chosen participating newsagent to pick up your newspaper using your Subscription Card, or arrange a home delivery using your delivery letter.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product NationalDelivery correctly 1`] = `
<div>
  <span
    class="css-1p5gon9"
  >
    <div>
      <p
        class="css-1378exm"
      >
        You will receive your newspaper from 01-01-25
      </p>
      <p>
        Visit your chosen participating newsagent to pick up your newspaper using your Subscription Card, or arrange a home delivery using your delivery letter.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product SubscriptionCard correctly 1`] = `
<div>
  <span
    class="css-1p5gon9"
  >
    <div>
      <p
        class="css-1378exm"
      >
        You will receive your newspaper from 01-01-25
      </p>
      <p
        class="css-c5d9qv"
      >
        You will receive your Subscription Card in your subscriber pack in the post, along with your home delivery letter.
      </p>
      <p>
        Visit your chosen participating newsagent to pick up your newspaper using your Subscription Card, or arrange a home delivery using your delivery letter.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product TierThree correctly 1`] = `
<div>
  <span
    class="css-1p5gon9"
  >
    <span
      class="css-1p5gon9"
    >
      <div>
        <p
          class="css-1378exm"
        >
          Your first issue of Guardian Weekly will be published on 01-01-25
        </p>
        <p>
          Please allow one to seven days after the publication date for your copy to be delivered to your door, depending on postal services.
        </p>
      </div>
    </span>
    <div>
      <p
        class="css-1378exm"
      >
        Your digital benefits start today.
      </p>
      <p>
        Please ensure you are signed in on all your devices to enjoy all your benefits, including unlimited app access and uninterrupted ad-free reading.
      </p>
    </div>
  </span>
</div>
`;
